--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "morgan": "^1.9.1",
     "mysql": "^2.15.0",
     "node-uuid": "^1.4.8",
+    "nodejs-mysql": "^0.1.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "serve-favicon": "~2.4.5",
     "wysiwyg-editor-node-sdk": "^2.3.4"
