--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.21.0",
     "morgan": "^1.9.1",
     "mysql": "^2.15.0",
     "node-uuid": "^1.4.8",
     "nodejs-mysql": "^0.1.3",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "serve-favicon": "~2.4.5",
