--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.17.1",
     "baidu-aip-sdk": "^2.3.9",
     "body-parser": "~1.18.2",
+    "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
@@ -19,6 +20,7 @@
     "fs": "^0.0.1-security",
     "gm": "^1.23.1",
     "http-errors": "~1.6.3",
+    "iconv-lite": "^0.5.0",
     "jade": "~1.11.0",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.1",
