--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "auto": "nodemon ./bin/www"
   },
   "dependencies": {
+    "address": "^1.1.0",
     "async": "^2.6.0",
     "axios": "^0.17.1",
     "baidu-aip-sdk": "^2.3.9",
@@ -18,6 +19,7 @@
     "express": "~4.16.1",
     "express-session": "^1.15.6",
     "fs": "^0.0.1-security",
+    "getmac": "^1.4.6",
     "gm": "^1.23.1",
     "http-errors": "~1.6.3",
     "iconv-lite": "^0.5.0",
