--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "auto": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "address": "^1.1.0",
@@ -35,7 +35,11 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "pm2": "^3.5.1",
     "serve-favicon": "~2.4.5",
     "wysiwyg-editor-node-sdk": "^2.3.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
